<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionHubActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/idBottomNavBar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/stack_sans_notch"
            android:gravity="center_horizontal"
            android:text="@string/str_nav_transactions"
            android:textColor="@color/text_primary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idBtnAddIncome"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/income_green"
            android:fontFamily="@font/stack_sans_notch"
            android:text="@string/str_btn_add_income"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            app:elevation="2dp" />

        <Button
            android:id="@+id/idBtnAddExpense"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:backgroundTint="@color/expense_red"
            android:fontFamily="@font/stack_sans_notch"
            android:text="@string/str_btn_add_expense"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            app:elevation="2dp" />

    </LinearLayout>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/idBottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="8dp"
        app:itemIconTint="@color/text_primary"
        app:itemTextColor="@color/text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>